--- a/FYP_Project.vcxproj.filters
+++ b/FYP_Project.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SimConsts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FYP_Project.cpp">
